# CrowdGuard

./: .env.example  README.md  index.html  main.py  pyproject.toml  reindex.py  requirements.txt  script.js  style.css
Crowd/: chatbot.html  index.html  pricing.html
Crowd/css/: styles.css
Crowd/js/: editor.js  ex_main.js  floorplan.js  map.js  physics.js  render.js  simrender.js  state.js  ui.js  ui_snapshots.js  venue.js
css/: pricing.css
js/: canvas.js  chatbot.js  export.js  flowfield.js  input.js  main.js  simulation.js  timeline.js
