[project]
name = "ytrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.4",
    "faiss-cpu>=1.12.0",
    "ipykernel>=7.1.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.3",
    "langchain-groq>=1.0.0",
    "pymupdf>=1.26.6",
    "pypdf>=6.1.3",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
]
